--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ on:
 env:
   DOCKER_BUILDKIT: 1
   FFMPEG_REPO_OVERRIDE: 'https://github.com/IncendiaryMedia/ffmpeg.git'
-  GIT_BRANCH_OVERRIDE: 'ertmp-nvenc-12.2'
+  GIT_BRANCH_OVERRIDE: 'nvenc-ertmp'
 
 jobs:
   pre_check:
@@ -245,8 +245,6 @@ jobs:
           password: ${{ github.token }}
       - name: Build ffmpeg
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           T="$(echo -n ${{ github.token }} | sha256sum | head -c 64)" && echo -e "::add-mask::${T}\n::stop-commands::${T}"
           ./build.sh ${{ matrix.target }} ${{ matrix.variant }}
       - name: Replace spaces in string
